--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title></title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="css/style.css">
 <meta name="description" content="">
 
@@ -15,6 +18,7 @@
 <link rel="apple-touch-icon" href="icon.png">
 
 <link rel="manifest" href="site.webmanifest">
+
 <meta name="theme-color" content="#fafafa">
 <body>
   <div id="chart"></div>
