--- a/index.html
+++ b/index.html
@@ -22,6 +22,20 @@
 <meta name="theme-color" content="#fafafa">
 <body>
   <div id="chart"></div>
-  <div id="table"></div>
+  <div id="table">
+    <table>
+      <thead>
+        <tr>
+          <th class="rank">Rank</th>
+          <th class="title">Title</th>
+          <th class="value">Value</th>
+          <th class="date">Release Date</th>
+        </tr>
+      </thead>
+      <tbody id="datagrid">
+     
+      </tbody>
+    </table>
+  </div>
 </body>
 </html>
